ipc/ipdl/test/ipdl/error/actorparam_badState.ipdl
protocol actorparam_badState {

child:
    async Msg(actorparam_badState:FARGEL p);
    async __delete__();

state S1:
    send Msg goto S1;
    send __delete__;
};
